--- a/StudySpark_Project/README
+++ b/StudySpark_Project/README
@@ -1,3 +1,19 @@
+## Setup Instructions
+### 2. Install Dependencies
+
+Using `uv` (recommended):
+```bash
+uv sync
+```
+
+Or using pip:
+```bash
+pip install -r requirements.txt
+```
+
+
+
+
 structure (for now):
 
 -Studyspark.py
