--- a/StudySpark_Project/README
+++ b/StudySpark_Project/README
@@ -1,4 +1,25 @@
+## Project Structure
+
+```
+helpdesk_ai/
+├── StudySpark.py                   
+├── .env.example                    # Environment template
+├── pyproject.toml                  # Dependencies (uv)
+├── services/                       
+│   ├── ai_service.py               # All Gemini API calls
+│   └── pdf_processing_service.py   # PDF processing
+└── utils/                          # Shared utilities
+    └── lang_tracing.py             # Langfuse configuration
+```
+
+
+
 ## Setup Instructions
+### 1. Clone and Navigate
+
+```bash
+cd Projeto_de_Curso/StudySpark_Project
+```
 ### 2. Install Dependencies
 
 Using `uv` (recommended):
@@ -10,16 +31,34 @@ Or using pip:
 ```bash
 pip install -r requirements.txt
 ```
+### 3. Configure Environment
 
+Edit `.env` and add your API keys:
+```
+GOOGLE_API_KEY=your_gemini_api_key_here
+```
+Get your Gemini API key at: https://aistudio.google.com/apikey
 
+### 4. (Optional) Configure Langfuse Tracing
 
+For observability, add Langfuse keys to `.env`:
+```
+LANGFUSE_PUBLIC_KEY=your_public_key
+LANGFUSE_SECRET_KEY=your_secret_key
+LANGFUSE_BASE_URL=https://cloud.langfuse.com
+```
 
-structure (for now):
+Sign up at: https://cloud.langfuse.com
 
--Studyspark.py
--.env
--.gitignore
--pages
---(all four pages go here)
--services
---ai_service
+### 5. Run the App
+
+```bash
+uv run streamlit run StudySpark.py
+```
+
+Or:
+```bash
+streamlit run StudySpark.py
+```
+
+The app will open in your browser at `http://localhost:8501`
