--- a/StudySpark_Project/README
+++ b/StudySpark_Project/README
@@ -1,15 +1,15 @@
 ## Project Structure
 
 ```
-helpdesk_ai/
+StudySpark_Project/
 ├── StudySpark.py                   
 ├── .env.example                    # Environment template
 ├── pyproject.toml                  # Dependencies (uv)
-├── pages/                       
-│   ├── ai_service.py               # All Gemini API calls
-│   ├── ai_service.py               # All Gemini API calls
-│   ├── ai_service.py               # All Gemini API calls
-│   └── pdf_processing_service.py   # PDF processing
+├── pages/                          # Additional UI pages
+│   ├── 1_Document_Upload.py        # Document upload page
+│   ├── 2_Summary.py                # Summary page
+│   ├── 3_QA.py                     # Quetions/Answers page
+│   └── 4_Quiz.py                   # Quiz page
 ├── services/                       
 │   ├── ai_service.py               # All Gemini API calls
 │   └── pdf_processing_service.py   # PDF processing
@@ -18,8 +18,19 @@ helpdesk_ai/
 ```
 
 
+##Streamlit.io App Link - https://studysparkpy-ahhf3njmdkuoe6753vfamr.streamlit.app
 
-## Setup Instructions
+
+##User Guide
+### 1. Open the app (be it with the link or locally)
+### 2. Upload a PDF document (Has to be text, not a scan, photo, etc.)
+### 3. Now you can one of the following:
+#### 3.1 Generate document summary - choose your prefered summary format and length, and press "Generate Summary"
+#### 3.2 Chat with an "Assistant" - just ask a question regarding the paper, and recieve an answer
+#### 3.3 Generate a quiz - Pick a number of questions, press "Generate Quiz" and you get to solve a quiz about the document
+
+
+## Local Setup Instructions
 ### 1. Clone and Navigate
 
 ```bash
