--- a/README
+++ b/README
@@ -18,7 +18,7 @@ StudySpark_Project/
 ```
 
 
-##Streamlit.io App Link - https://studysparkpy-ahhf3njmdkuoe6753vfamr.streamlit.app
+##Streamlit.io App Link - https://studyspark-8sj2nxw3ptg8heauugzyps.streamlit.app/
 
 
 ##User Guide
